--- a/README
+++ b/README
@@ -16,7 +16,8 @@ Some *.bse files used for testing are also included in the ./test
 subdirectory.
 
 To get a basic start, you'll also need Gtk+-2.0, a recent version
-of the Gtk+-2.0 based GnomeCanvas and the Ogg/Vorbis Codec libraries.
+of the Gtk+-2.0 based GnomeCanvas, Guile-1.4 and the Ogg/Vorbis
+Codec libraries.
 Though optional, it is a good idea to also have libmad (MPEG audio
 decoder library) around when compiling BEAST. Most distributions
 already ship these packages or will soon, their sources can be
@@ -26,10 +27,12 @@ GnomeCanvas (GNOME-2.0):
 	ftp://ftp.gnome.org/pub/GNOME/earthquake/sources/libgnomecanvas/
 Gtk+-2.0:
 	ftp://ftp.gtk.org/pub/gtk/v2.0/
+Guile-1.4:
+	http://www.gnu.org/software/guile/guile.html
 Ogg/Vorbis (1.0rc3 as of this writing):
 	http://www.xiph.org/ogg/vorbis/download/
 MAD (BSE was developed against libmad-0.14.2):
-	ftp://ftp.mars.org/pub/mpeg/
+	http://www.mars.org/home/rob/proj/mpeg/
 
 The official ftp site for BEAST/BSE is:
   ftp://beast.gtk.org/pub/beast
