--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -73,6 +73,8 @@ Wed Jun 12 06:31:34 2002  Tim Janik  <timj@gtk.org>
 	* gslgluecodec.[hc]: serialization/deserialization layer
 	which allowes GslGlue to be used from remote processes
 	transparently.
+	
+	* gslgluesignal.c: implementation of signal notification.
 
 	* bseglue.[hc]: new file, imlpementing the GslGlueVTable backend
 	for BSE.
